@@ -9,6 +9,10 @@
 
 	* src/import-export/ofx/test/Makefile.am: make sure we can find
 	  libofx/libofx.h
+
+	* src/report/standard-reports/transaction.scm: include split
+	  transactions in the filtering of the transaction report.
+	  Fixes #113461.
 	
 2003-05-23  Derek Atkins  <derek@ihtfp.com>
 
